# zich-rpc

./: .gitignore  Control_Json.md  Doxyfile  README.md  api_example.h  client_demo_main  client_demo_main.cpp  makefile  server_demo_main  server_demo_main.cpp  test.cpp  zcrpc.h
Linux/: .gitignore  CMakeLists.txt  README.md  client_main  client_main.cpp  core_main.cpp  main  main.cpp  main2  server_main  server_main.cpp
Linux/lib/: socket_core.hpp
Linux/mains/: c11_client.cpp  c11_server.cpp  chat_client.cpp  chat_client_main.cpp  chat_server_main.cpp  posix_chat_main.cpp  socket_core.cpp
example/: client.cpp  function_define.h  makefile  server.cpp  threaded_client.cpp
lib/: socket_core.hpp
reserved/: c11_server.cpp  client_demo.cpp  server_demo.cpp
src/: zich_rpc.h
src/client/: call_tuple.h  client.h  simple_client_stub.h
src/network/: length_prefixed_socket.h  socket_connect.h
src/packet/: function_call_tule.h  function_traits.h  get_str_rep.h  netpacket_object.h  packet_parser.h  serializer.cpp  serializer.h
src/packet_protocal/: simple_protocal.h
src/server/: function_call_tule.h  server.h  simple_server_stub.h  thread_pool.h  threaded_server_stub.h
src/util/: convert_enum.h  function_traits.h  get_str_rep.h  print_tuple.h
test/: TEST_SUIT.h  call.cpp  call_tuple.cpp  epoll_bench.txt  log.txt  log_client.txt  makefile  print_tuple.h  test.cpp  test_client_call.cpp  test_epoll_client.cpp  test_epoll_server.cpp  test_function_traits.cpp  test_length_prefixed_socket.cpp  test_netpacket_object.cpp  test_object_decoder.cpp  test_packet_parser  test_packet_parser.cpp  test_serializer.cpp  test_simple_stub.cpp  test_socket_connect  test_socket_connect.cpp  test_thread_pool.cpp  test_threaded_stub.cpp
